src/objects/cb5__CBNonFinancialLibrary__c.object
<CustomObject>
    <fields>
        <fullName>From__c</fullName>
        <defaultValue>0</defaultValue>
        <label>From</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NFL1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>NFL1</label>
        <referenceTo>cb5__CBNonFinancialLibrary__c</referenceTo>
        <relationshipLabel>CB Non-Financial Libraries</relationshipLabel>
        <relationshipName>CB_Non_Financial_Libraries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>NFL2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>NFL2</label>
        <referenceTo>cb5__CBNonFinancialLibrary__c</referenceTo>
        <relationshipLabel>CB Non-Financial Libraries (NFL2)</relationshipLabel>
        <relationshipName>CB_Non_Financial_Libraries1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>NFL3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>NFL3</label>
        <referenceTo>cb5__CBNonFinancialLibrary__c</referenceTo>
        <relationshipLabel>CB Non-Financial Libraries (NFL3)</relationshipLabel>
        <relationshipName>CB_Non_Financial_Libraries2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>UpTo__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Up To</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>cb5__CBBudgetLine__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CB Budget Line</label>
        <referenceTo>cb5__CBBudgetLine__c</referenceTo>
        <relationshipLabel>CB Non-Financial Libraries</relationshipLabel>
        <relationshipName>CBNFLs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>cb5__Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>cb5__Index__c</fullName>
        <displayFormat>NFL-{0000}</displayFormat>
        <label>Index</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>cb5__LayerTitle__c</fullName>
        <formula>cb5__Layer__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Layer Title</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cb5__Layer__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Layer</label>
        <referenceTo>cb5__CBLayer__c</referenceTo>
        <relationshipName>NonfinancialLibraries</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>cb5__SingleValue__c</fullName>
        <label>Single Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>cb5__TotalType__c</fullName>
        <formula>TEXT(cb5__Layer__r.cb5__TotalType__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>TotalType</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cb5__Type__c</fullName>
        <defaultValue>&apos;Static&apos;</defaultValue>
        <label>Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Static</fullName>
                    <default>true</default>
                    <label>Static</label>
                </value>
                <value>
                    <fullName>Custom</fullName>
                </value>
                <value>
                    <fullName>Tax</fullName>
                </value>
                <value>
                    <fullName>Result</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>cb5__Unit__c</fullName>
        <formula>TEXT(cb5__Layer__r.cb5__Unit__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Unit</label>
        <type>Text</type>
    </fields>
    <label>CB Non-Financial Library</label>
    <listViews>
        <fullName>cb5__All</fullName>
        <columns>NAME</columns>
        <columns>cb5__Layer__c</columns>
        <columns>cb5__Type__c</columns>
        <columns>From__c</columns>
        <columns>UpTo__c</columns>
        <columns>cb5__SingleValue__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Title</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CB Non-Financial Libraries</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>